--- a/index.html
+++ b/index.html
@@ -4,26 +4,17 @@
   <meta charset="UTF-8" />
   <title>호텔 + 관광지 + 카페 + 음식점 검색 지도</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-  />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
     body { font-family: "Segoe UI", sans-serif; margin: 0; padding: 0; background: #f9f9f9; text-align: center; }
     header { background: #4a90e2; color: white; padding: 20px; font-size: 24px; }
     #search-box { margin: 20px; }
-    input[type="text"], select {
-      width: 250px; padding: 10px; font-size: 16px;
-      border: 1px solid #ccc; border-radius: 4px; margin-right: 5px;
-    }
+    input, select { width: 250px; padding: 10px; font-size: 16px; border: 1px solid #ccc; border-radius: 4px; margin-right: 5px; }
     button { padding: 10px 20px; font-size: 16px; background: #4a90e2; color: white; border: none; border-radius: 4px; cursor: pointer; }
     button:hover { background: #357ab8; }
     #map { width: 100%; height: 450px; margin-top: 10px; }
     #result-list { list-style: none; padding: 0; max-width: 600px; margin: 20px auto; text-align: left; }
-    #result-list li {
-      background: white; padding: 10px; margin-bottom: 8px; border-radius: 5px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1); cursor: pointer;
-    }
+    #result-list li { background: white; padding: 10px; margin-bottom: 8px; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1); cursor: pointer; }
     #result-list li:hover { background: #e6f0ff; }
   </style>
 </head>
@@ -48,7 +39,7 @@
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
   <script>
-    const apiKey = "12fc29b53c4f41c7bff006089808d0ad"; // ✅ 당신의 Geoapify 키
+    const apiKey = "12fc29b53c4f41c7bff006089808d0ad";
     let map = L.map("map").setView([37.5665, 126.9780], 12);
     L.tileLayer(
       `https://maps.geoapify.com/v1/tile/osm-bright/{z}/{x}/{y}.png?apiKey=${apiKey}`,
@@ -58,12 +49,19 @@
     let markers = [];
 
     async function searchRegion() {
-      const keyword = document.getElementById("keyword").value.trim();
+      let keyword = document.getElementById("keyword").value.trim();
       const category = document.getElementById("category").value;
       if (!keyword) return alert("지역명을 입력하세요!");
 
       clearMarkers();
       document.getElementById("result-list").innerHTML = "검색 중...";
+
+      // 🔤 한글일 경우 자동 번역 (Geoapify 인식 가능하게)
+      if (/[가-힣]/.test(keyword)) {
+        const trans = await fetch(`https://translate.googleapis.com/translate_a/single?client=gtx&sl=ko&tl=en&dt=t&q=${encodeURIComponent(keyword)}`);
+        const data = await trans.json();
+        keyword = data[0][0][0]; // 번역 결과
+      }
 
       // 1️⃣ 지역 이름으로 좌표 검색
       const geoUrl = `https://api.geoapify.com/v1/geocode/search?text=${encodeURIComponent(keyword)}&apiKey=${apiKey}`;
@@ -72,6 +70,7 @@
 
       if (!geoData.features.length) {
         alert("지역을 찾을 수 없습니다.");
+        document.getElementById("result-list").innerHTML = "";
         return;
       }
 
@@ -109,7 +108,7 @@
         const [lon, lat] = p.geometry.coordinates;
         const name = p.properties.name || "이름 없음";
         const addr = p.properties.address_line2 || "";
-        const cat = p.properties.categories?.[0] || "";
+        const cat = p.properties.categories?.[0] || "알 수 없음";
 
         const marker = L.marker([lat, lon]).addTo(map);
         marker.bindPopup(`<b>${name}</b><br>${addr}<br><small>${cat}</small>`);
