--- a/index.html
+++ b/index.html
@@ -2,27 +2,181 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>호텔 + 관광지 + 카페 + 음식점 검색 지도</title>
+  <title>🌴 여행지 추천 지도</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
   <style>
-    body { font-family: "Segoe UI", sans-serif; margin: 0; padding: 0; background: #f9f9f9; text-align: center; }
-    header { background: #4a90e2; color: white; padding: 20px; font-size: 24px; }
-    #search-box { margin: 20px; }
-    input, select { width: 250px; padding: 10px; font-size: 16px; border: 1px solid #ccc; border-radius: 4px; margin-right: 5px; }
-    button { padding: 10px 20px; font-size: 16px; background: #4a90e2; color: white; border: none; border-radius: 4px; cursor: pointer; }
-    button:hover { background: #357ab8; }
-    #map { width: 100%; height: 450px; margin-top: 10px; }
-    #result-list { list-style: none; padding: 0; max-width: 600px; margin: 20px auto; text-align: left; }
-    #result-list li { background: white; padding: 10px; margin-bottom: 8px; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1); cursor: pointer; transition: 0.2s; }
-    #result-list li:hover { background: #e6f0ff; transform: scale(1.02); }
+    /* ====== 공통 스타일 ====== */
+    body {
+      font-family: "Segoe UI", sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      transition: background 0.5s, color 0.5s;
+      color: #fff;
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
+        url("https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1600&q=80")
+        no-repeat center center fixed;
+      background-size: cover;
+    }
+
+    header {
+      background: rgba(0, 0, 0, 0.5);
+      color: white;
+      padding: 20px;
+      font-size: 26px;
+      font-weight: bold;
+      backdrop-filter: blur(5px);
+      border-bottom: 1px solid rgba(255,255,255,0.2);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 15px;
+    }
+
+    /* 🌗 테마 전환 버튼 */
+    #theme-toggle {
+      padding: 8px 15px;
+      font-size: 15px;
+      background: rgba(255,255,255,0.2);
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    #theme-toggle:hover {
+      background: rgba(255,255,255,0.35);
+      transform: scale(1.05);
+    }
+
+    /* 🧊 반투명 검색창 */
+    #search-box {
+      margin: 25px auto;
+      background: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(10px);
+      padding: 15px 20px;
+      border-radius: 15px;
+      box-shadow: 0 4px 25px rgba(0, 0, 0, 0.3);
+      display: inline-block;
+      color: white;
+    }
+
+    input, select {
+      width: 220px;
+      padding: 10px;
+      font-size: 16px;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      border-radius: 6px;
+      background: rgba(255, 255, 255, 0.1);
+      color: white;
+      margin-right: 5px;
+      outline: none;
+    }
+
+    input::placeholder { color: #ddd; }
+
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      background: #4a90e2;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background: #357ab8;
+      transform: scale(1.05);
+    }
+
+    #map {
+      width: 90%;
+      height: 450px;
+      margin: 20px auto;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.4);
+    }
+
+    #result-list {
+      list-style: none;
+      padding: 0;
+      max-width: 700px;
+      margin: 20px auto;
+      text-align: left;
+    }
+
+    #result-list li {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 10px 15px;
+      margin-bottom: 8px;
+      border-radius: 8px;
+      box-shadow: 0 1px 4px rgba(255, 255, 255, 0.2);
+      cursor: pointer;
+      transition: 0.25s;
+    }
+
+    #result-list li:hover {
+      background: rgba(255, 255, 255, 0.25);
+      transform: scale(1.03);
+    }
+
+    /* 📍 마커 애니메이션 */
+    .leaflet-marker-icon {
+      transition: transform 0.3s ease;
+    }
+    .leaflet-marker-icon:hover {
+      transform: scale(1.3);
+    }
+
+    /* 🌞 라이트 테마 */
+    body.light-mode {
+      background: linear-gradient(rgba(255,255,255,0.4), rgba(255,255,255,0.4)),
+        url("https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1600&q=80")
+        no-repeat center center fixed;
+      background-size: cover;
+      color: #222;
+    }
+
+    body.light-mode header {
+      background: rgba(255,255,255,0.7);
+      color: #222;
+      border-bottom: 1px solid rgba(0,0,0,0.2);
+    }
+
+    body.light-mode #search-box {
+      background: rgba(255, 255, 255, 0.8);
+      color: #222;
+    }
+
+    body.light-mode input,
+    body.light-mode select {
+      background: rgba(255, 255, 255, 0.9);
+      color: #222;
+      border: 1px solid #ccc;
+    }
+
+    body.light-mode #result-list li {
+      background: rgba(255, 255, 255, 0.8);
+      color: #222;
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+    }
+
   </style>
 </head>
 <body>
-  <header>지역 검색으로 호텔 + 관광지 + 카페 + 음식점 찾기 🌏</header>
+  <header>
+    🌴 여행지 추천 지도
+    <button id="theme-toggle" onclick="toggleTheme()">🌙 다크 모드</button>
+  </header>
 
   <div id="search-box">
-    <input type="text" id="keyword" placeholder="예: 서울, 부산, 제주도" />
+    <input type="text" id="keyword" placeholder="예: 제주도, 부산, 하와이" />
     <select id="category">
       <option value="hotel">호텔</option>
       <option value="tourism">관광지</option>
@@ -31,6 +185,9 @@
       <option value="all">모두 검색</option>
     </select>
     <button onclick="searchRegion()">검색</button>
+    <select id="history" onchange="loadHistory(this.value)">
+      <option value="">📜 최근 검색</option>
+    </select>
   </div>
 
   <div id="map"></div>
@@ -41,10 +198,17 @@
   <script>
     const apiKey = "12fc29b53c4f41c7bff006089808d0ad";
     let map = L.map("map").setView([37.5665, 126.9780], 12);
-    L.tileLayer(
-      `https://maps.geoapify.com/v1/tile/osm-bright/{z}/{x}/{y}.png?apiKey=${apiKey}`,
-      { attribution: "© OpenStreetMap contributors © Geoapify" }
-    ).addTo(map);
+    let currentLayer;
+
+    function setMapStyle(darkMode = true) {
+      if (currentLayer) map.removeLayer(currentLayer);
+      const style = darkMode ? "dark-matter" : "osm-bright";
+      currentLayer = L.tileLayer(
+        `https://maps.geoapify.com/v1/tile/${style}/{z}/{x}/{y}.png?apiKey=${apiKey}`,
+        { attribution: "© OpenStreetMap contributors © Geoapify" }
+      ).addTo(map);
+    }
+    setMapStyle(true);
 
     let markers = [];
 
@@ -54,16 +218,17 @@
       if (!keyword) return alert("지역명을 입력하세요!");
 
       clearMarkers();
-      document.getElementById("result-list").innerHTML = "검색 중...";
+      document.getElementById("result-list").innerHTML = "<li>🔍 검색 중...</li>";
 
-      // 한글 자동 번역 (Geoapify는 영어 인식이 잘 됨)
+      // 한글 자동 번역 (Geoapify는 영어 인식에 강함)
       if (/[가-힣]/.test(keyword)) {
-        const trans = await fetch(`https://translate.googleapis.com/translate_a/single?client=gtx&sl=ko&tl=en&dt=t&q=${encodeURIComponent(keyword)}`);
+        const trans = await fetch(
+          `https://translate.googleapis.com/translate_a/single?client=gtx&sl=ko&tl=en&dt=t&q=${encodeURIComponent(keyword)}`
+        );
         const data = await trans.json();
         keyword = data[0][0][0];
       }
 
-      // 1️⃣ 지역 좌표 검색
       const geoUrl = `https://api.geoapify.com/v1/geocode/search?text=${encodeURIComponent(keyword)}&apiKey=${apiKey}`;
       const geoRes = await fetch(geoUrl);
       const geoData = await geoRes.json();
@@ -75,9 +240,8 @@
       }
 
       const { lat, lon } = geoData.features[0].properties;
-      map.setView([lat, lon], 13);
+      map.flyTo([lat, lon], 13, { animate: true, duration: 1 });
 
-      // 2️⃣ 주변 장소 검색
       const categories =
         category === "all"
           ? "accommodation.hotel,tourism.attraction,catering.restaurant,catering.cafe"
@@ -94,9 +258,9 @@
       const poiData = await poiRes.json();
 
       displayPlaces(poiData.features);
+      saveHistory(keyword);
     }
 
-    // ✅ 결과 목록 표시 + 네이버지도 연결
     function displayPlaces(data) {
       const list = document.getElementById("result-list");
       list.innerHTML = "";
@@ -109,20 +273,18 @@
         const [lon, lat] = p.geometry.coordinates;
         const name = p.properties.name || "이름 없음";
         const addr = p.properties.address_line2 || "";
-        const cat = p.properties.categories?.[0] || "알 수 없음";
+        const cat = p.properties.categories?.[0] || "기타";
 
         const marker = L.marker([lat, lon]).addTo(map);
         marker.bindPopup(`<b>${name}</b><br>${addr}<br><small>${cat}</small>`);
         markers.push(marker);
 
         const li = document.createElement("li");
-        li.textContent = `[${cat}] ${name} (${addr})`;
+        li.innerHTML = `<strong>[${cat}]</strong> ${name}<br><small>${addr}</small>`;
         li.onclick = () => {
-          map.setView([lat, lon], 16);
+          map.flyTo([lat, lon], 16);
           marker.openPopup();
-          // 🔗 클릭 시 네이버지도에서 열기
-          const naverUrl = `https://map.naver.com/v5/search/${encodeURIComponent(name)}`;
-          window.open(naverUrl, "_blank");
+          window.open(`https://map.naver.com/v5/search/${encodeURIComponent(name)}`, "_blank");
         };
         list.appendChild(li);
       });
@@ -132,6 +294,46 @@
       markers.forEach((m) => map.removeLayer(m));
       markers = [];
     }
+
+    // 🔄 검색 기록 저장
+    function saveHistory(keyword) {
+      let history = JSON.parse(localStorage.getItem("searchHistory") || "[]");
+      if (!history.includes(keyword)) {
+        history.push(keyword);
+        localStorage.setItem("searchHistory", JSON.stringify(history));
+        updateHistoryUI();
+      }
+    }
+
+    function updateHistoryUI() {
+      const history = JSON.parse(localStorage.getItem("searchHistory") || "[]");
+      const sel = document.getElementById("history");
+      sel.innerHTML = `<option value="">📜 최근 검색</option>` + history.map(h => `<option value="${h}">${h}</option>`).join("");
+    }
+
+    function loadHistory(value) {
+      if (!value) return;
+      document.getElementById("keyword").value = value;
+      searchRegion();
+    }
+
+    // 🌙 다크/라이트 모드 전환
+    function toggleTheme() {
+      const body = document.body;
+      const btn = document.getElementById("theme-toggle");
+      const isDark = !body.classList.contains("light-mode");
+      if (isDark) {
+        body.classList.add("light-mode");
+        btn.textContent = "🌙 다크 모드";
+        setMapStyle(false);
+      } else {
+        body.classList.remove("light-mode");
+        btn.textContent = "☀️ 라이트 모드";
+        setMapStyle(true);
+      }
+    }
+
+    updateHistoryUI();
   </script>
 </body>
 </html>
